fix: authentication flow
