# internal/handlers/users.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"net/http"
+	_ "project-2026-06-misoastory-be-go/internal/dto"
 	"project-2026-06-misoastory-be-go/internal/services"
 
 	"github.com/gin-gonic/gin"
@@ -17,6 +18,11 @@ func NewUserHandler() *UserHandler {
 	}
 }
 
+// @Success 200 {object} map[string][]dto.UserResponse
+// @Failure 401 {object} map[string]string
+// @Failure 403 {object} map[string]string
+// @Security BearerAuth
+// @Router /users [get]
 func (h *UserHandler) GetUsers(c *gin.Context) {
 	users, err := h.userService.GetUsers()
 	if err != nil {
